Avoid duplication in ItemListTextField